fix: Fixed bug causing horizontal scrollbar to appear

--- a/src/styles/components/header/Header.module.css
+++ b/src/styles/components/header/Header.module.css
@@ -3,13 +3,11 @@
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
-  padding: 1rem;
   z-index: 999;
 }
 
 .headerLogo {
   text-align: center;
-  width: 100vw;
 }
 
 .headerLogo h1 {
@@ -32,7 +30,7 @@
   border-bottom: 1px solid #e5e5e5;
   display: flex;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   padding: 0 1rem;
   place-items: center;
 }
